[package]
name = "rdns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
clap = { version = "3.0", features = ["derive"] }
chrono = "0.4"
byteorder = "1"
num-traits = "0.2"
num-derive = "0.3"
